# k-rgb

./: .gitignore  CMakeLists.txt  README.md
packaging/: io.github.busybeaversoftware.krgb.desktop  io.github.busybeaversoftware.krgb.metainfo.xml
packaging/udev/: 60-alienware-aw410k.rules  60-alienware-keyboards.rules
src/cli/: main.cpp
src/core/: aw410k_device.cpp  aw410k_device.h  keymap.h
src/gui/: CMakeLists.txt  keyboardcontroller.cpp  keyboardcontroller.h  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
tools/: aw410k.py
